codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_shortcuts_collaboration_modes_enabled.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  / for commands                             ! for shell commands               "
"  ctrl + j for newline                       tab to queue message               "
"  @ for file paths                           ctrl + v to paste images           "
"  ctrl + g to edit in external editor        esc esc to edit previous message   "
"  ctrl + c to exit                           shift + tab to change mode         "
"                                             ctrl + t to view transcript        "
"                                                                                "
"  Feature commands:                                                             "
"  /diff show git changes        /experimental toggle treesitter, LSP, and more  "
